# pg_backup_auditor

./: .gitignore  CHANGELOG.md  Makefile  README.md  RELEASES.md  meson.build
.github/workflows/: ci.yml  release.yml
docs/: INSTALL.md  MESON_BUILD.md
include/: adapter.h  arg_parser.h  backup_chain.h  cmd_help.h  common.h  constants.h  crc32c.h  ini_parser.h  pg_backup_auditor.h  pgbackrest.h  sha256.h  types.h
src/: main.c
src/adapters/: adapter_interface.h  adapter_registry.c  adapter_registry.d  pg_basebackup.c  pg_basebackup.d  pg_probackup.c  pg_probackup.d  pgbackrest.c  pgbackrest.d
src/cli/: cmd_audit.c  cmd_check.c  cmd_help.c  cmd_info.c  cmd_list.c  cmd_stat.c
src/common/: arg_parser.c  backup_chain.c  crc32c.c  file_utils.c  file_utils.d  ini_parser.c  ini_parser.d  logging.c  logging.d  sha256.c  string_utils.c  string_utils.d  xlog.c  xlog.d
src/scanner/: fs_scanner.c  fs_scanner.d
src/validator/: backup_validator.c  backup_validator.d  pg_basebackup_validator.c  pg_probackup_validator.c  pgbackrest_validator.c  wal_validator.c  wal_validator.d
tests/: meson.build
tests/fixtures/: create_test_catalog.py
tests/unit/: Makefile  README.md  meson.build  test_adapter_registry.c  test_adapter_registry.d  test_anomaly_detection.c  test_arg_parser.c  test_backup_chain.c  test_backup_validator.c  test_backup_validator.d  test_crc32c.c  test_file_utils.c  test_fs_scanner.c  test_fs_scanner.d  test_ini_parser.c  test_ini_parser.d  test_integration_helpers.h  test_pg_basebackup.c  test_pg_basebackup.d  test_pg_basebackup_validator.c  test_pg_probackup.c  test_pg_probackup.d  test_pg_probackup_validator.c  test_pgbackrest.c  test_pgbackrest.d  test_pgbackrest_validator.c  test_runner  test_runner.c  test_runner.d  test_sorting.c  test_sorting.d  test_string_utils.c  test_string_utils.d  test_wal_validator.c  test_wal_validator.d  test_xlog.c  test_xlog.d
